--- a/public/css/style.css
+++ b/public/css/style.css
@@ -79,7 +79,7 @@ input[type=text], input[type=password] {
 }
 .row-container{
     display: grid;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: 40% 30% 30%;
     
 }
 .table-headers{
