--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,7 @@
 nav{
     margin: 0;
     width: 100vw;
-    background-color: black;
+    background-color: #1B1717;
     height: 8vh;
 }
 .nav-container{
@@ -13,26 +13,33 @@ nav{
 }
 
 .nav-text{
-    font-size: 1.2rem;
+    font-family: 'Montserrat';
+    font-size: 1rem;
     font-weight: bold;
     text-decoration: none;
     color: white;
 }
 .nav-text:hover{
-    color: blue;
-    border-bottom: 2px solid blue;
+    border-bottom: 2px solid white;
 }
 img{
     display: block;
     margin: 0 auto 0 auto;
+    border-radius: 10px;
+    border: 1px solid #1B1717;
 }
 body{
     margin: 0;
 }
-h1,h3{
+h1,h3,h4,a{
+    font-family: 'Montserrat';
     text-align: center;
+    margin:0;
+    text-decoration: none;
 }
+
 p{
+    font-family: 'Montserrat';
     text-align: center;
     margin: 5vh 20vw 5vh 20vw;
 }
@@ -57,12 +64,25 @@ input[type=text], input[type=password] {
     text-align: center;
     margin: 0 auto 0 auto;
 }
-  
+.button-white {
+    background-color: grey;
+    color: #1B1717;
+    padding: 2px 10px 2px 10px;
+    border: none;
+    cursor: pointer;
+    text-align: center;
+    margin: 0 10px 0 10px;
+    border-radius: 5px;
+}  
   
 .button:hover {
     opacity: 0.8;
 }
-
+.select-container{
+    display: flex;
+    margin: 5vh auto 5vh auto;
+    justify-content: center;
+}
 
 .login-container {
     padding: 16px;
@@ -76,6 +96,8 @@ input[type=text], input[type=password] {
     display: grid;
     grid-auto-rows: auto;
     margin: 5vh 25vw 5vh 25vw;
+    background-color: #D54C4C;
+    border-radius: 5px;
 }
 .row-container{
     display: grid;
@@ -83,10 +105,15 @@ input[type=text], input[type=password] {
     
 }
 .table-headers{
-    border: 1px solid black;
-    background-color: blue;
+    font-family: 'Montserrat';
+    color: #000000;
+    text-align: center;
+    font-weight: bold;
+    padding: 10px;
 }
 .table-content{
-    border: 1px solid black;
-    
+    font-family: 'Montserrat';
+    color: #FFE6E6;
+    text-align: center;
+    padding: 10px;
 }
