--- a/public/css/style.css
+++ b/public/css/style.css
@@ -47,7 +47,7 @@ input[type=text], input[type=password] {
 }
   
 .button {
-    background-color: #04AA6D;
+    background-color: #871945;
     color: white;
     padding: 14px 20px;
     width: 10vw;
@@ -75,10 +75,7 @@ input[type=text], input[type=password] {
     margin: 5vh auto 5vh auto;
     justify-content: center;
 }
-.content{
-    display: flex;
-    flex-direction: row;
-}
+
 .login-container {
     padding: 16px;
     margin: 10vh 30vw 0 30vw;
