--- a/public/css/style.css
+++ b/public/css/style.css
@@ -170,7 +170,8 @@ input[type=text], input[type=password] {
 .footer .box-container .box .share {
     display: flex;
     flex-wrap: wrap;
-    padding: 1rem 0;
+    justify-content: center;
+    text-align: center;
 }
 
 .footer .box-container .box .share a {
